# RECEIPT-PROCESSOR

./: .gitignore  CALENDAR_INTELLIGENCE_SUMMARY.md  CALENDAR_SETUP_INSTRUCTIONS.md  CERTIFICATE_FIX_INSTRUCTIONS.md  CERTIFICATE_UPLOAD_GUIDE.md  CONFIGURATION_COMPLETE.md  DEPLOYMENT_LOG.md  ENHANCED_DASHBOARD_INTEGRATION.md  ENHANCED_RECEIPT_PROCESSING_README.md  ENHANCED_SYSTEM_SUMMARY.md  ENHANCED_TRANSACTION_SYSTEM.md  ENVIRONMENT_MANAGEMENT.md  HUGGINGFACE_SETUP_GUIDE.md  LICENSE  README.md  RENDER_DEPLOY_INSTRUCTIONS.md  ROCK_SOLID_iOS_APP_STATUS.md  SECURITY.md  SECURITY_DEPLOYMENT_CHECKLIST.md  SECURITY_HARDENING_SUMMARY.md  SETUP_COMPLETE.md  STABILITY_IMPROVEMENTS_SUMMARY.md  SYSTEM_STATUS_FINAL.md  TELLER_CONFIGURATION_GUIDE.md  TEST_RESULTS_SUMMARY.md  activate_latest_token.py  activate_real_user_token.py  add_calendar_scopes.py  advanced_receipt_intelligence.py  advanced_transaction_matcher.py  ai_receipt_matcher.py  analyze_receipt_mismatch.py  app.py  app_backup.py  app_comprehensive_fix.py  app_fix.py  app_full_backup.py  app_minimal_health.py  app_old_broken.py  app_simplified.py  (+185 more)
app/: __init__.py  config.py
app/api/: __init__.py  auth.py  banking.py  dashboard.py  health.py  main.py  receipts.py  transactions.py
app/services/: __init__.py  ai_service.py  bank_service.py  mongo_service.py  r2_service.py  receipt_service.py  teller_service.py  transaction_service.py
app/utils/: __init__.py  helpers.py  security.py  validators.py
attached_assets/: Pasted--Complete-Credentials-Summary-Environment-Variables-env-file-env-Gmail-Accounts-with-e-1750613724211_1750613724211.txt  Pasted--usr-bin-env-python3-Token-Files-Generator-for-Gmail-Intelligence-System-This-script-will-help-1750613638232_1750613638232.txt
config/: config.example.json  settings.py
credentials/: teller_certificate.pem  teller_private_key.pem
data/: processed_emails.json
enhanced_components/: README.md
gmail_auth/: client_secret.example.json  service_account.example.json
static/: enhanced_dashboard.js  enhanced_notifications.js  enhanced_style.css  receipt_scanner.js  script.js  script_backup.js  script_old.js  style.css  style_backup.css  sw.js
templates/: base.html  connect.html  debug.html  index.html  index_backup.html  index_old.html  index_pwa.html  index_pwa_backup.html  login.html  receipt_scanner.html  settings.html  simplified_dashboard.html  test.html  test_calendar_intelligence.html  test_camera.html  transaction_manager.html
